--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
+    "d3": "^5.7.0",
     "jquery": "^3.3.1",
+    "phylotree": "file:.yalc/phylotree",
     "popper.js": "^1.14.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -32,7 +34,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "scripts": {
-    "dev": "npx webpack-dev-server --mode=development --open",
+    "develop": "npx webpack-dev-server --mode=development --open",
     "build": "webpack --devtool=none",
     "serve": "node src/server.js"
   }
