--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
+    "save-svg-as-png": "^1.4.14",
     "text-width": "^1.2.0"
   },
   "devDependencies": {
