--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
   "devDependencies": {
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^2.0.0",
     "eslint": "^5.10.0",
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.8.0",
+    "react-test-renderer": "^16.8.6",
     "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
@@ -37,9 +42,10 @@
     "develop": "npx webpack-dev-server --mode=development --open",
     "build": "webpack --devtool=none",
     "serve": "node src/server.js",
-    "library": "npx webpack --devtool=none --config=webpack.lib.config.js"
+    "library": "npx webpack --devtool=none --config=webpack.lib.config.js",
+    "test": "jest --watch"
   },
-  "files": {
+  "files": [
     "lib/bundle.js"
-  }
+  ]
 }
