--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
     "d3": "^5.7.0",
-    "jquery": "^3.3.1",
     "phylotree": "file:.yalc/phylotree",
-    "popper.js": "^1.14.6",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1"
   },
