--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^16.6.3",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.6.3",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
