--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.10",
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "4.3.1",
     "d3": "^5.7.0",
     "phylotree": "1.0.0-alpha.17",
     "react": "^16.6.3",
-    "react-bootstrap": "^1.0.0-beta.9",
+    "react-bootstrap": "1.0.0-beta.14",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "underscore": "^1.9.1"
