Build library with Babel.

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,12 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "presets": ["@babel/preset-react"],
   "env": {
     "test": {
-      "presets": ["@babel/preset-env", "@babel/preset-react"]
+      "presets": ["@babel/preset-react"]
+    },
+    "library": {
+      "presets": ["@babel/preset-react"],
+      "plugins": ["babel-plugin-convert-jsx-extension-to-js"]
     }
   }
 }
