--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "4.3.1",
     "d3": "^5.7.0",
+    "d3-react-axis": "0.0.3",
     "phylotree": "1.0.0-alpha.17",
     "react": "^16.12.0",
     "underscore": "^1.9.1"
