--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-phylotree",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "main": "./library.js",
   "repository": "https://github.com/stephenshank/react-phylotree",
   "author": "Stephen Shank <sshank314@gmail.com>",
@@ -13,7 +13,7 @@
     "d3": "^5.7.0",
     "d3-react-axis": "0.0.3",
     "phylotree": "1.0.0-alpha.17",
-    "react": "^16.12.0",
+    "react": "16.12.0",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
@@ -32,7 +32,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "react-bootstrap": "1.0.0-beta.14",
-    "react-dom": "^16.6.3",
+    "react-dom": "16.12.0",
     "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.8.6",
     "style-loader": "^0.23.1",
