--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-phylotree",
-  "version": "0.4.3",
-  "main": "./library.js",
+  "version": "0.5.0",
+  "main": "./phylotree.js",
   "repository": "https://github.com/stephenshank/react-phylotree",
   "author": "Stephen Shank <sshank314@gmail.com>",
   "license": "MIT",
